fix: banner z-index

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -134,6 +134,7 @@ $z-side-panel-planner: $z-side-panel-task-and-notes + 2;
 $z-task-side-bar-over: 100;
 $z-main-header-wrapper: 50;
 $z-side-nav: 60;
+$z-banner: 11;
 $z-main-header: 10;
 $z-bookmarks: 9;
 $z-backdrop: 222;
