--- a/src/app/core/banner/banner/banner.component.scss
+++ b/src/app/core/banner/banner/banner.component.scss
@@ -5,6 +5,7 @@ $vertical-button-margin: $s;
 :host {
   display: block;
   position: relative;
+  z-index: $z-banner;
 }
 
 .content-wrapper {
